・PcRequestDTOでソフト名を受け取る形にした ・Pcサービスクラスでsoftwareテーブルへの追加とPc-softテーブルへの追加処理を作成し、PC登録処理を完成させた ・Pc情報表示形式に合わせたPcListItemDtoを作成 ・PcListItemDtoへの変換MappermethodをPcMapperクラスに作成 ・一覧表示用のControllerメソッドの作成